--- a/package.json
+++ b/package.json
@@ -1,40 +1,71 @@
 {
-  "name": "kcc-athletic",
-  "version": "1.0.0",
+  "name": "kcc-newsroom",
+  "version": "2.0.0",
   "description": "",
-  "main": "gulpfile.js",
+  "private": true,
+  "babel": {
+    "presets": [
+      [
+        "@babel/preset-env",
+        {
+          "useBuiltIns": "usage",
+          "corejs": {
+            "version": 3,
+            "proposals": true
+          }
+        }
+      ]
+    ]
+  },
+  "browserslist": [
+    "defaults",
+    "ie >=9",
+    "not ie <= 8",
+    "not ie_mob <= 8"
+  ],
   "scripts": {
     "watch": "gulp",
-    "build": "gulp --production",
-    "test": "gulp --production"
+    "production": "run-p g-p wp-bundle",
+    "g-production": "gulp --production",
+    "g-dev": "gulp",
+    "wp-bundle": "npx webpack --mode=production",
+    "wp-dev": "npx webpack --mode=development",
+    "g-wait": "sleep 1",
+    "g-p": "run-s g-wait g-production",
+    "g-d": "run-s g-wait g-dev",
+    "dev": "run-p g-d wp-dev",
+    "build": "gulp build"
   },
   "author": "",
-  "license": "",
+  "license": "ISC",
   "devDependencies": {
-    "browser-sync": "^2.13.0",
-    "cross-spawn": "^5.1.0",
-    "del": "^2.2.1",
-    "fs": "^0.0.1-security",
-    "gulp": "^3.9.1",
-    "gulp-autoprefixer": "^3.1.0",
-    "gulp-concat": "^2.6.0",
-    "gulp-cssnano": "^2.1.2",
-    "gulp-if": "^2.0.1",
-    "gulp-imagemin": "^3.2.0",
-    "gulp-sass": "^3.1.0",
-    "gulp-sitemap": "^5.1.0",
-    "gulp-sourcemaps": "^2.4.1",
-    "gulp-uglify": "^2.1.2",
-    "gulp-util": "^3.0.8",
-    "jquery": "^3.2.1",
-    "js-yaml": "^3.6.1",
-    "minimist": "^1.2.0",
-    "popper.js": "^1.12.9",
-    "require-dir": "^1.0.0",
-    "run-sequence": "^1.2.1",
-    "vinyl-ftp": "^0.6.1",
-    "wiredep": "^4.0.0",
-    "yargs": "^7.0.2"
+    "@babel/cli": "^7.4.4",
+    "@babel/core": "^7.4.5",
+    "@babel/preset-env": "^7.4.5",
+    "babel-loader": "^8.0.6",
+    "browser-sync": "^2.26.7",
+    "clean-webpack-plugin": "^3.0.0",
+    "cross-spawn": "^6.0.5",
+    "del": "^4.1.1",
+    "fs": "0.0.1-security",
+    "gulp": "^4.0.2",
+    "gulp-autoprefixer": "^6.1.0",
+    "gulp-cssnano": "^2.1.3",
+    "gulp-hashsum": "^1.2.0",
+    "gulp-if": "^2.0.2",
+    "gulp-imagemin": "^6.0.0",
+    "gulp-sass": "^4.0.2",
+    "gulp-sitemap": "^7.3.0",
+    "gulp-sourcemaps": "^2.6.5",
+    "hash-webpack-plugin": "0.0.5",
+    "js-yaml": "^3.13.1",
+    "npm-run-all": "^4.1.5",
+    "webpack": "^4.35.2",
+    "webpack-cli": "^3.3.5",
+    "yargs": "^13.2.4"
   },
-  "dependencies": {}
+  "dependencies": {
+    "core-js": "^3.1.4",
+    "regenerator-runtime": "^0.13.2"
+  }
 }
