--- a/gulpconfig.yml
+++ b/gulpconfig.yml
@@ -44,7 +44,7 @@ sass:
 
 # Gulp task to create stylesheet for custom CloudCannon editor styles (CMS customizations)
 # Any changes to contentSass should be also be made to travisContentSass.
-contentSass:
+cmsScss:
   # Autoprefixer will make sure your CSS works with these browsers
   compatibility:    # These are pretty standard autoprefixer compatibility settings
     - "last 2 versions"
