Make JS files export their function. Import them into entry files.

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,6 @@
 title: "Kankakee Community College"
 name: "KCC Newsroom"
+site_name: Newsroom
 timezone: America/Chicago
 theme: "kcc-gem-theme"
 google-tag_key: Google Tag Manager key goes here
@@ -9,9 +10,6 @@ nav_links:
   - link_text: Home
     link_href: ''
     button: false
-  - link_text: Landing Page
-    link_href: 'landing-page'
-    button: false
   - link_text: News
     link_href: 'news'
     button: false
@@ -19,7 +17,8 @@ nav_links:
     link_href: 'events'
     button: false
   - link_text: Videos
-    link_href: 'vidoes'
+    link_href: 'videos'
+    button: false
   - link_text: Contact
     link_href: '#contact'
     button: false
