Cleanup .gitignore & add `.jekyll-cache/`.

--- a/.gitignore
+++ b/.gitignore
@@ -38,11 +38,5 @@ node_modules/
 # Ignore gem lock to avoid mac/windows discrepencies
 Gemfile.lock
 
-# Ignore adobe directory containing working illustrator, photoshop,
-assets/adobe/
-assets/adobe/*
-/adobe/
-adobe/*
-
-# Yarn error log
-yarn-error.log
+# Jekyll 4's new cache dir
+.jekyll-cache/
