--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,3 @@
-### Ignore the Gemfile to keep it out of cloudcannon ###
-Gemfile
 
 ### General Apple things to ignore ###
 .DS_Store
@@ -38,11 +36,5 @@ node_modules/
 # Ignore gem lock to avoid mac/windows discrepencies
 Gemfile.lock
 
-# Ignore adobe directory containing working illustrator, photoshop,
-assets/adobe/
-assets/adobe/*
-/adobe/
-adobe/*
-
-# Yarn error log
-yarn-error.log
+# Jekyll 4's caching dir
+.jekyll-cache/
