Remove `package-lock.json` from the repo (add to `.gitignore`).

--- a/.gitignore
+++ b/.gitignore
@@ -30,8 +30,9 @@ _site
 .sass-cache
 .jekyll-metadata
 
-# Ignore node modules
+# NodeJS stuffs
 node_modules/
+package-lock.json
 
 # Ignore gem lock to avoid mac/windows discrepencies
 Gemfile.lock
