--- a/web.config
+++ b/web.config
@@ -1,35 +1,51 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <configuration>
-    <system.webServer>
-        <rewrite>
-            <rules>
-                <rule name="HTTPS Redirect" stopProcessing="true">
-                    <match url="(.*)" />
-                    <conditions>
-                        <add input="{HTTPS}" pattern="^OFF$" />
-                    </conditions>
-                    <action type="Redirect" url="https://{HTTP_HOST}/{R:1}" />
-                </rule>
-                <rule name="/help Redirect" stopProcessing="true">
-                   <match url="(.*)" />
-                   <conditions logicalGrouping="MatchAny" trackAllCaptures="false">
-                      <add input="{HTTP_HOST}{REQUEST_URI}" pattern="(.*).kcc.edu/help" />
-                   </conditions>
-                   <action type="Redirect" url="https://form.jotform.com/81775152814965" redirectType="Permanent"/>
-                 </rule>
-            </rules>
-        </rewrite>
-        <httpErrors>
-          <remove statusCode="401" subStatusCode="-1" />
-          <remove statusCode="403" subStatusCode="-1" />
-          <remove statusCode="404" subStatusCode="-1" />
-          <remove statusCode="500" subStatusCode="-1" />
-            <!-- full url when responsemode is Redirect -->
-          <error statusCode="401" path="/404.html" responseMode="Redirect" />
-            <!-- local relative path when responsemode is ExecuteURL -->
-          <error statusCode="403" path="/404.html" responseMode="ExecuteURL" />
-          <error statusCode="404" path="/404.html" responseMode="ExecuteURL" />
-          <error statusCode="500" path="/404.html" responseMode="ExecuteURL" />
-        </httpErrors>
-    </system.webServer>
+  <system.webServer>
+    <httpProtocol>
+      <customHeaders>
+        <add name="Access-Control-Allow-Headers" value="Origin, X-Requested-With, Content-Type, Accept" />
+        <add name="Access-Control-Allow-Methods" value="POST,GET" />
+      </customHeaders>
+    </httpProtocol>
+    <rewrite>
+      <outboundRules>
+      <clear />
+      <rule name="AddCrossDomainHeader">
+        <match serverVariable="RESPONSE_Access_Control_Allow_Origin" pattern=".*" />
+          <conditions logicalGrouping="MatchAll" trackAllCaptures="true">
+            <add input="{HTTP_ORIGIN}" pattern="(http(s)?://((.+\.)?kcc\.edu|localhost:3000))" />
+          </conditions>
+          <action type="Rewrite" value="{C:0}" />
+        </rule>
+      </outboundRules>
+      <rules>
+        <rule name="HTTPS Redirect" stopProcessing="true">
+          <match url="(.*)" />
+          <conditions>
+            <add input="{HTTPS}" pattern="^OFF$" />
+          </conditions>
+          <action type="Redirect" url="https://{HTTP_HOST}/{R:1}" />
+        </rule>
+        <rule name="/help Redirect" stopProcessing="true">
+          <match url="(.*)" />
+          <conditions logicalGrouping="MatchAny" trackAllCaptures="false">
+            <add input="{HTTP_HOST}{REQUEST_URI}" pattern="(.*).kcc.edu/help" />
+          </conditions>
+          <action type="Redirect" url="https://form.jotform.com/81775152814965" redirectType="Permanent"/>
+        </rule>
+      </rules>
+    </rewrite>
+    <httpErrors>
+      <remove statusCode="401" subStatusCode="-1" />
+      <remove statusCode="403" subStatusCode="-1" />
+      <remove statusCode="404" subStatusCode="-1" />
+      <remove statusCode="500" subStatusCode="-1" />
+      <!-- full url when responsemode is Redirect -->
+      <error statusCode="401" path="/404.html" responseMode="Redirect" />
+      <!-- local relative path when responsemode is ExecuteURL -->
+      <error statusCode="403" path="/404.html" responseMode="ExecuteURL" />
+      <error statusCode="404" path="/404.html" responseMode="ExecuteURL" />
+      <error statusCode="500" path="/404.html" responseMode="ExecuteURL" />
+    </httpErrors>
+  </system.webServer>
 </configuration>
