Add caching profile to break cache on update.

--- a/web.config
+++ b/web.config
@@ -47,5 +47,13 @@
       <error statusCode="404" path="/404.html" responseMode="ExecuteURL" />
       <error statusCode="500" path="/404.html" responseMode="ExecuteURL" />
     </httpErrors>
+    <caching enabled="true" enableKernelCache="true">
+     <profiles>
+        <add extension=".html" policy="CacheUntilChange" kernelCachePolicy="CacheUntilChange" />
+        <add extension=".pdf" policy="CacheUntilChange" kernelCachePolicy="CacheUntilChange" />
+        <add extension=".js" policy="CacheUntilChange" kernelCachePolicy="CacheUntilChange" />
+        <add extension=".css" policy="CacheUntilChange" kernelCachePolicy="CacheUntilChange" />
+     </profiles>
+  </caching>
   </system.webServer>
 </configuration>
