Edit comment for `video_content:` setting in posts.

--- a/_config.yml
+++ b/_config.yml
@@ -95,7 +95,7 @@ _comments:
   layout: Do NOT modify layouts. It may break things.
   baseurl: Do NOT modify baseurl. It WILL break all page links.
   description: "Descriptions are seen by search engines like Google and displayed in search results."
-  video_content: Be sure to clear the check-box if your post does not contain a YouTube video.
+  video_content: "Place a check in the box if the post contains YouTube video-content. (Be sure to clear the check-box if your post does not contain a YouTube video.)"
   video_link: Paste your YouTube share link here. <br>YouTube share links look like "https://youtu.be/RVd1gnq4iOc"
   press_release: Check this box to display the press-release info at the bottom of the post.
 
