--- a/_config.yml
+++ b/_config.yml
@@ -29,24 +29,20 @@ collections:
   contacts:
     output: false
 defaults:
-- scope:
-    type: ''
-  values:
-    image: "/uploads/kcc_default_post-placeholder.png"
-- scope:
-    path: ''
-    type: drafts
-  values:
-    image: "/uploads/kcc_default_post-placeholder.png"
-- scope:
-    path: ''
-    type: posts
-  values:
-    layout: post
-    title: ''
-    baseurl: ../../../../
-    permalink: /:year/:month/:day/:title:output_ext
-    image: "/uploads/kcc_default_post-placeholder.png"
+  - scope:
+      path: ''
+      type: drafts
+    values:
+      image: "/uploads/kcc_default_post-placeholder.png"
+  - scope:
+      path: ''
+      type: posts
+    values:
+      layout: post
+      title: ''
+      baseurl: ../../../../
+      permalink: /:year/:month/:day/:title:output_ext
+      image: "/uploads/kcc_default_post-placeholder.png"
 permalink: pretty
 email: your-email@domain.com
 description: > # this means to ignore newlines until "baseurl:"
@@ -95,7 +91,7 @@ _comments:
   layout: Do NOT modify layouts. It may break things.
   baseurl: Do NOT modify baseurl. It WILL break all page links.
   description: "Descriptions are seen by search engines like Google and displayed in search results."
-  video_content: "Place a check in the box if the post contains YouTube video-content. (Be sure to clear the check-box if your post does not contain a YouTube video.)"
+  video_content: "Place a check in the box if the post contains a YouTube embed. (Be sure to clear the check-box if your post does not contain a YouTube video.)"
   video_link: Paste your YouTube share link here. <br>YouTube share links look like "https://youtu.be/RVd1gnq4iOc"
   press_release: Check this box to display the press-release info at the bottom of the post.
 
