--- a/_config.yml
+++ b/_config.yml
@@ -28,6 +28,8 @@ collections:
     output: false
   contacts:
     output: false
+  press_release:
+    output: false
 defaults:
   - scope:
       path: ''
@@ -91,9 +93,8 @@ _comments:
   layout: Do NOT modify layouts. It may break things.
   baseurl: Do NOT modify baseurl. It WILL break all page links.
   description: "Descriptions are seen by search engines like Google and displayed in search results."
-  video_content: "Place a check in the box if the post contains a YouTube embed. (Be sure to clear the check-box if your post does not contain a YouTube video.)"
-  video_link: Paste your YouTube share link here. <br>YouTube share links look like "https://youtu.be/RVd1gnq4iOc"
-  press_release: Check this box to display the press-release info at the bottom of the post.
+  video_link: Paste your YouTube share-link here. <br>YouTube share links look like "https://youtu.be/RVd1gnq4iOc"
+  press_release: Check this box to display the press-release info at the bottom of the post. <br> Edit the press release
 
 _options:
   content:
