--- a/_config.yml
+++ b/_config.yml
@@ -2,6 +2,7 @@ title: "Kankakee Community College"
 name: "KCC Newsroom"
 site_name: Newsroom
 timezone: America/Chicago
+# BUILD
 google-tag_key: GTM-KKZRJB5
 url: "https://news.kcc.edu"
 public-url: "https://news.kcc.edu"
