--- a/gulpconfig.yml
+++ b/gulpconfig.yml
@@ -77,6 +77,7 @@ watch: # 'Watch' for changes in all the following:
   pages:
     - "*.{md,html,yml,xml}"
     - "{_data,_includes,_layouts,_pages,_posts,_alerts}/**/*.{md,html,yml,xml}"
+    - "archive/*"
     # All these subfolders are added because the watch task was not looking deep enough
     # !exlclusions:
     - "!sitemap.xml"
