Replace configuration that broke the post layout.

--- a/_config.yml
+++ b/_config.yml
@@ -28,6 +28,15 @@ collections:
     output: false
   contacts:
     output: false
+defaults:
+  - scope:
+      path: ''
+      type: posts
+    values:
+      layout: post
+      baseurl: ../../../../
+      permalink: /:year/:month/:day/:title:output_ext
+      image: "placeholder_square.jpg"
 permalink: pretty
 email: your-email@domain.com
 description: > # this means to ignore newlines until "baseurl:"
