--- a/_config.yml
+++ b/_config.yml
@@ -31,11 +31,18 @@ collections:
 defaults:
   - scope:
       path: ''
+      type: drafts
+    values:
+      image: "/uploads/kcc_default_post-placeholder.png"
+  - scope:
+      path: ''
       type: posts
     values:
       layout: post
+      title: ''
       baseurl: ../../../../
       permalink: /:year/:month/:day/:title:output_ext
+      image: "/uploads/kcc_default_post-placeholder.png"
 permalink: pretty
 email: your-email@domain.com
 description: > # this means to ignore newlines until "baseurl:"
@@ -109,6 +116,3 @@ _options:
     undo: true
     redo: true
     styles: /assets/css/content.css
-
-_defaults:
-  image: "/uploads/kcc_default_post-placeholder.png"
