Start moving 2019 archived post images to `cdn.kcc.edu/newsroom/2019/`.

--- a/_config.yml
+++ b/_config.yml
@@ -65,7 +65,7 @@ kramdown:
   smart_quotes: apos,apos,quot,quot
 
 include:
-  - "archive/*"
+  - "archive/"
 exclude:
   - "gulpfile.js"
   - "node_modules"
