--- a/web.config
+++ b/web.config
@@ -27,11 +27,12 @@
           <action type="Redirect" url="https://{HTTP_HOST}/{R:1}" />
         </rule>
         <rule name="/help Redirect" stopProcessing="true">
-          <match url="(.*)" />
-          <conditions logicalGrouping="MatchAny" trackAllCaptures="false">
-            <add input="{HTTP_HOST}{REQUEST_URI}" pattern="(.*).kcc.edu/help" />
-          </conditions>
+          <match url="^help$" />
           <action type="Redirect" url="https://form.jotform.com/81775152814965" redirectType="Permanent"/>
+        </rule>
+        <rule name="Archived Articles Redirect" stopProcessing="true">
+          <match url="(201[89]\/\d{2}\/\d{2}\/)([^\.]+).html" />
+          <action type="Redirect" url="https://{HTTP_HOST}/archive/{R:1}{R:2}/" />
         </rule>
       </rules>
     </rewrite>
