--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ name: "KCC Newsroom"
 site_name: Newsroom
 timezone: America/Chicago
 port: 3000
-google-tag_key: GTM-KKZRJB5
+google-tag_key: GTM-T37TN4S
 url: "https://news.kcc.edu"
 public-url: "https://news.kcc.edu"
 theme: "kcc-gem-theme"
