--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ exclude:
   - "buildtools/"
   - "postcss.config.js"
 
-uploads_dir: "uploads/2022"
+uploads_dir: "/uploads/2022"
 
 _comments:
   layout: Do NOT modify layouts. It may break things.
