Add newer `paths.uploads` CC configuration.

--- a/_config.yml
+++ b/_config.yml
@@ -82,6 +82,8 @@ exclude:
   - "postcss.config.js"
 
 uploads_dir: "/uploads/2022"
+paths:
+  uploads: /uploads/2022
 
 _comments:
   layout: Do NOT modify layouts. It may break things.
