--- a/web.config
+++ b/web.config
@@ -13,7 +13,7 @@
       <rule name="AddCrossDomainHeader">
         <match serverVariable="RESPONSE_Access_Control_Allow_Origin" pattern=".*" />
           <conditions logicalGrouping="MatchAll" trackAllCaptures="true">
-            <add input="{HTTP_ORIGIN}" pattern="(http(s)?://((.+\.)?kcc\.edu|localhost:3000))" />
+            <add input="{HTTP_ORIGIN}" pattern="(http(s)?://((.+\.)?kcc\.edu|localhost:[34]000|experience-test\.elluciancloud\.com\/.*))" />
           </conditions>
           <action type="Rewrite" value="{C:0}" />
         </rule>
