--- a/web.config
+++ b/web.config
@@ -3,21 +3,10 @@
   <system.webServer>
     <httpProtocol>
       <customHeaders>
-        <add name="Access-Control-Allow-Headers" value="Origin, X-Requested-With, Content-Type, Accept" />
-        <add name="Access-Control-Allow-Methods" value="POST,GET" />
+        <add name="Access-Control-Allow-Origin" value="*" />
       </customHeaders>
     </httpProtocol>
     <rewrite>
-      <outboundRules>
-      <clear />
-      <rule name="AddCrossDomainHeader">
-        <match serverVariable="RESPONSE_Access_Control_Allow_Origin" pattern=".*" />
-          <conditions logicalGrouping="MatchAll" trackAllCaptures="true">
-            <add input="{HTTP_ORIGIN}" pattern="(http(s)?://((.+\.)?kcc\.edu|localhost:[34]000|experience-test\.elluciancloud\.com\/.*))" />
-          </conditions>
-          <action type="Rewrite" value="{C:0}" />
-        </rule>
-      </outboundRules>
       <rules>
         <rule name="HTTPS Redirect" stopProcessing="true">
           <match url="(.*)" />
