Try capturing domain and rewriting header with rewriteMap.

--- a/web.config
+++ b/web.config
@@ -1,24 +1,27 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <configuration>
   <system.webServer>
-    <httpProtocol>
-      <customHeaders>
-        <add name="Access-Control-Allow-Headers" value="Origin, X-Requested-With, Content-Type, Accept" />
-        <add name="Access-Control-Allow-Methods" value="POST,GET" />
-      </customHeaders>
-    </httpProtocol>
     <rewrite>
       <outboundRules>
-      <clear />
-      <rule name="AddCrossDomainHeader">
-        <match serverVariable="RESPONSE_Access_Control_Allow_Origin" pattern=".*" />
-          <conditions logicalGrouping="MatchAll" trackAllCaptures="true">
-            <add input="{HTTP_ORIGIN}" pattern="(http(s)?://((.+\.)?kcc\.edu|localhost:[34]000|experience-test\.elluciancloud\.com))" />
-          </conditions>
-          <action type="Rewrite" value="{C:0}" />
-        </rule>
+      <rule name="Set-Access-Control-Allow-Origin for known origins">
+        <match serverVariable="RESPONSE_Access-Control-Allow-Origin" pattern=".+" negate="true" />
+        <conditions>
+          <add input="{AllowedOrigins:{CAPTURED_ORIGIN}}" pattern=".+" />
+        </conditions>
+        <action type="Rewrite" value="{C:0}" />
+      </rule>
       </outboundRules>
       <rules>
+        <rule name="Capture origin header">
+          <match url="(.*)" />
+          <conditions>
+            <add input="{HTTP_ORIGIN}" pattern=".+" />
+          </conditions>
+          <serverVariables>
+            <set name="CAPTURED_ORIGIN" value="{C:0}" />
+          </serverVariables>
+          <action type="None" />
+        </head>
         <rule name="HTTPS Redirect" stopProcessing="true">
           <match url="(.*)" />
           <conditions>
@@ -35,6 +38,14 @@
           <action type="Redirect" url="https://{HTTP_HOST}/archive/{R:1}{R:2}/" />
         </rule>
       </rules>
+      <rewriteMaps>
+        <rewriteMap name="AllowedOrigins">
+          <add key="kcc.edu" value="kcc.edu" />
+          <add key="localhost:3000" value="localhost:3000" />
+          <add key="localhost:4000" value="localhost:4000" />
+          <add key="experience-test.elluciancloud.com" value="experience-test.elluciancloud.com" />
+        </rewriteMap>
+      </rewriteMaps>
     </rewrite>
     <httpErrors>
       <remove statusCode="401" subStatusCode="-1" />
