Try cors module.

--- a/web.config
+++ b/web.config
@@ -1,17 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <configuration>
   <system.webServer>
+    <cors enabled="true">
+      <add origin="https://*.kcc.edu" />
+      <add origin="http://localhost:3000" />
+      <add origin="https://experience-test.elluciancloud.com" />
+    </cors>
     <rewrite>
-      <outboundRules>
-      <clear />
-      <rule name="AddCrossDomainHeader">
-        <match serverVariable="RESPONSE_Access_Control_Allow_Origin" pattern=".*" />
-          <conditions logicalGrouping="MatchAll" trackAllCaptures="true">
-            <add input="{HTTP_ORIGIN}" pattern="(http(s)?://((.+)?\.kcc\.edu|localhost:[34]000|experience-test\.elluciancloud\.com))" />
-          </conditions>
-          <action type="Rewrite" value="{C:0}" />
-        </rule>
-      </outboundRules>
       <rules>
         <rule name="HTTPS Redirect" stopProcessing="true">
           <match url="(.*)" />
