--- a/web.config
+++ b/web.config
@@ -2,6 +2,16 @@
 <configuration>
   <system.webServer>
     <rewrite>
+    <outboundRules>
+      <clear />
+      <rule name="AddCrossDomainHeader">
+        <match serverVariable="RESPONSE_Access_Control_Allow_Origin" pattern=".*" />
+          <conditions logicalGrouping="MatchAll" trackAllCaptures="true">
+            <add input="{HTTP_ORIGIN}" pattern="(http(s)?://((.+)?\.kcc\.edu|localhost:[34]000|experience-test\.elluciancloud\.com))" />
+          </conditions>
+          <action type="Rewrite" value="{C:0}" />
+        </rule>
+      </outboundRules>
       <rules>
         <rule name="HTTPS Redirect" stopProcessing="true">
           <match url="(.*)" />
