--- a/web.config
+++ b/web.config
@@ -2,16 +2,29 @@
 <configuration>
   <system.webServer>
     <rewrite>
+    <allowedServerVariables>
+      <add name="CAPTURED_ORIGIN" />
+      <add name="RESPONSE_Access-Control-Allow-Origin" />
+    </allowedServerVariables>
     <outboundRules>
       <clear />
-      <rule name="AddCrossDomainHeader">
-        <match serverVariable="RESPONSE_Access_Control_Allow_Origin" pattern=".*" />
-          <conditions logicalGrouping="MatchAll" trackAllCaptures="true">
-            <add input="{HTTP_ORIGIN}" pattern="(http(s)?://((.+)?\.kcc\.edu|localhost:[34]000|experience-test\.elluciancloud\.com))" />
-          </conditions>
-          <action type="Rewrite" value="{C:0}" />
-        </rule>
+      <rule name="Set-Access-Control-Allow-Origin for known origins">
+        <match serverVariable="RESPONSE_Access-Control-Allow-Origin" pattern=".+" negate="true" />
+        <conditions>
+          <add input="{AllowedOrigins:{CAPTURED_ORIGIN}}" pattern=".+" />
+        </conditions>
+        <action type="Rewrite" value="{C:0}" />
+      </rule>
       </outboundRules>
+      <rewriteMaps>
+        <rewriteMap name="AllowedOrigins">
+          <add key="kcc.edu" value="kcc.edu" />
+          <add key="www.kcc.edu" value="www.kcc.edu" />
+          <add key="localhost:3000" value="localhost:3000" />
+          <add key="localhost:4000" value="localhost:4000" />
+          <add key="experience-test.elluciancloud.com" value="experience-test.elluciancloud.com" />
+        </rewriteMap>
+      </rewriteMaps>
       <rules>
         <rule name="HTTPS Redirect" stopProcessing="true">
           <match url="(.*)" />
@@ -19,6 +32,16 @@
             <add input="{HTTPS}" pattern="^OFF$" />
           </conditions>
           <action type="Redirect" url="https://{HTTP_HOST}/{R:1}" />
+        </rule>
+        <rule name="Capture Origin Header">
+          <match url=".*" />
+          <conditions>
+            <add input="{HTTP_ORIGIN}" pattern=".+" />
+          </conditions>
+          <serverVariables>
+            <set name="CAPTURED_ORIGIN" value="{C:0}" />
+          </serverVariables>
+          <action type="None" />
         </rule>
         <rule name="/help Redirect" stopProcessing="true">
           <match url="^help$" />
