Add 2021 to archive redirect, rewrite for legibility...
- Adjust the Archive Redirect rule in newsroom to be easier to read:
  - Instead of starting the RegExp with `/^(20[12][8901]\/\d{2}...`
    switch it to something that better resembles a 4-digit year
  - Switch to `/^(20(?:19|19|20|21)\/\d{2}...` for legibility.
- Add the year `2021` to the archive redirect.

--- a/web.config
+++ b/web.config
@@ -25,8 +25,8 @@
           <action type="Redirect" url="https://form.jotform.com/81775152814965" redirectType="Permanent"/>
         </rule>
         <rule name="Archived Articles Redirect" stopProcessing="true">
-          <match url="(201[89]\/\d{2}\/\d{2}\/)([^\.]+).html" />
-          <action type="Redirect" url="https://{HTTP_HOST}/archive/{R:1}{R:2}/" />
+          <match url="^(20(?:18|19|20|21)\/\d{2}\/\d{2}\/[^\.]+).html$" />
+          <action type="Redirect" url="https://{HTTP_HOST}/archive/{R:1}/" />
         </rule>
       </rules>
     </rewrite>
