Update Nodejs, create Nodejs helper module...
- Update Nodejs to `v18.12.1`
- Create Nodejs module (`process-archive-files.mjs`) to find-and-replace
  a string throught all the files in a folder:
  - Replace all occurences of `href="http://www.kcc.edu/FacultyStaff/departments/marketing/Pages/logos.aspx"`
    with current/valid URL in all archived news posts.

--- a/_config.yml
+++ b/_config.yml
@@ -80,6 +80,7 @@ exclude:
   - "webpack.config.js"
   - "buildtools/"
   - "postcss.config.js"
+  - "process-archive-files.mjs"
 
 uploads_dir: "/uploads/2022"
 
