--- a/web.config
+++ b/web.config
@@ -43,12 +43,20 @@
       <error statusCode="500" path="/404.html" responseMode="ExecuteURL" />
     </httpErrors>
     <caching enabled="true" enableKernelCache="true">
-     <profiles>
-        <add extension=".html" policy="CacheUntilChange" kernelCachePolicy="CacheUntilChange" />
-        <add extension=".pdf" policy="CacheUntilChange" kernelCachePolicy="CacheUntilChange" />
-        <add extension=".js" policy="CacheUntilChange" kernelCachePolicy="CacheUntilChange" />
-        <add extension=".css" policy="CacheUntilChange" kernelCachePolicy="CacheUntilChange" />
-     </profiles>
-  </caching>
+      <profiles>
+          <add extension=".html" policy="CacheUntilChange" kernelCachePolicy="CacheUntilChange" />
+          <add extension=".pdf" policy="CacheUntilChange" kernelCachePolicy="CacheUntilChange" />
+          <add extension=".js" policy="CacheUntilChange" kernelCachePolicy="CacheUntilChange" />
+          <add extension=".css" policy="CacheUntilChange" kernelCachePolicy="CacheUntilChange" />
+          <add extension=".jpg" policy="CacheUntilChange" kernelCachePolicy="CacheUntilChange" />
+          <add extension=".jpeg" policy="CacheUntilChange" kernelCachePolicy="CacheUntilChange" />
+          <add extension=".png" policy="CacheUntilChange" kernelCachePolicy="CacheUntilChange" />
+          <add extension=".gif" policy="CacheUntilChange" kernelCachePolicy="CacheUntilChange" />
+          <add extension=".svg" policy="CacheUntilChange" kernelCachePolicy="CacheUntilChange" />
+      </profiles>
+    </caching>
+    <staticContent>
+      <mimeMap fileExtension=".webmanifest" mimeType="application/manifest+json" />
+    </staticContent>
   </system.webServer>
 </configuration>
