Try post configuration suggested by CloudCannon...
Add post configuration to prepopulate `date` &
`expire_date` with current date/time:

```yaml
collections:
  posts:
    _inputs:
      date:
        instance_value: NOW
      expire_date:
        instance_value: NOW
```

--- a/_config.yml
+++ b/_config.yml
@@ -28,6 +28,12 @@ collections:
     output: false
   contacts:
     output: false
+  posts:
+    _inputs:
+      date:
+        instance_value: NOW
+      expire_date:
+        instance_value: NOW
 defaults:
   - scope:
       path: ''
