--- a/_config.yml
+++ b/_config.yml
@@ -34,6 +34,12 @@ collections:
         instance_value: NOW
       expire_date:
         instance_value: NOW
+  drafts:
+    _inputs:
+      date:
+        instance_value: NOW
+      expire_date:
+        instance_value: NOW
 defaults:
   - scope:
       path: ''
