Try security headers.

--- a/web.config
+++ b/web.config
@@ -1,62 +1,73 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <configuration>
-  <system.webServer>
-    <rewrite>
-      <outboundRules>
-      <clear />
-      <rule name="AddCrossDomainHeader">
-        <match serverVariable="RESPONSE_Access_Control_Allow_Origin" pattern=".*" />
-          <conditions logicalGrouping="MatchAll" trackAllCaptures="true">
-            <add input="{HTTP_ORIGIN}" pattern="(http(s)?://((.+)?\.kcc\.edu|localhost:[34]000|experience-test\.elluciancloud\.com|eee-prod-web-content-public-blue-prodtest\.s3\.amazonaws\.com))" />
-          </conditions>
-          <action type="Rewrite" value="{C:0}" />
-        </rule>
-      </outboundRules>
-      <rules>
-        <rule name="HTTPS Redirect" stopProcessing="true">
-          <match url="(.*)" />
-          <conditions>
-            <add input="{HTTPS}" pattern="^OFF$" />
-          </conditions>
-          <action type="Redirect" url="https://{HTTP_HOST}/{R:1}" />
-        </rule>
-        <rule name="/help Redirect" stopProcessing="true">
-          <match url="^help$" />
-          <action type="Redirect" url="https://form.jotform.com/81775152814965" redirectType="Permanent"/>
-        </rule>
-        <rule name="Archived Articles Redirect" stopProcessing="true">
-          <match url="^(20(?:18|19|20|21)\/\d{2}\/\d{2}\/[^\.]+).html$" />
-          <action type="Redirect" url="https://{HTTP_HOST}/archive/{R:1}/" />
-        </rule>
-      </rules>
-    </rewrite>
-    <httpErrors>
-      <remove statusCode="401" subStatusCode="-1" />
-      <remove statusCode="403" subStatusCode="-1" />
-      <remove statusCode="404" subStatusCode="-1" />
-      <remove statusCode="500" subStatusCode="-1" />
-      <!-- full url when responsemode is Redirect -->
-      <error statusCode="401" path="/404.html" responseMode="Redirect" />
-      <!-- local relative path when responsemode is ExecuteURL -->
-      <error statusCode="403" path="/404.html" responseMode="ExecuteURL" />
-      <error statusCode="404" path="/404.html" responseMode="ExecuteURL" />
-      <error statusCode="500" path="/404.html" responseMode="ExecuteURL" />
-    </httpErrors>
-    <caching enabled="true" enableKernelCache="true">
-      <profiles>
-          <add extension=".html" policy="CacheUntilChange" kernelCachePolicy="CacheUntilChange" />
-          <add extension=".pdf" policy="CacheUntilChange" kernelCachePolicy="CacheUntilChange" />
-          <add extension=".js" policy="CacheUntilChange" kernelCachePolicy="CacheUntilChange" />
-          <add extension=".css" policy="CacheUntilChange" kernelCachePolicy="CacheUntilChange" />
-          <add extension=".jpg" policy="CacheUntilChange" kernelCachePolicy="CacheUntilChange" />
-          <add extension=".jpeg" policy="CacheUntilChange" kernelCachePolicy="CacheUntilChange" />
-          <add extension=".png" policy="CacheUntilChange" kernelCachePolicy="CacheUntilChange" />
-          <add extension=".gif" policy="CacheUntilChange" kernelCachePolicy="CacheUntilChange" />
-          <add extension=".svg" policy="CacheUntilChange" kernelCachePolicy="CacheUntilChange" />
-      </profiles>
-    </caching>
-    <staticContent>
-      <mimeMap fileExtension=".webmanifest" mimeType="application/manifest+json" />
-    </staticContent>
-  </system.webServer>
+    <system.webServer>
+        <security>
+            <requestFiltering removeServerHeader="true" />
+        </security>
+        <httpProtocol>
+            <customHeaders>
+                <remove name="X-Powered-By" />
+                <add name="X-Frame-Options" value="SAMEORIGIN" />
+                <add name="X-Content-Type-Options" value="nosniff" />
+                <add name="Strict-Transport-Security" value="max-age=31536000" />
+            </customHeaders>
+        </httpProtocol>
+        <rewrite>
+            <outboundRules>
+                <clear />
+                <rule name="AddCrossDomainHeader">
+                    <match serverVariable="RESPONSE_Access_Control_Allow_Origin" pattern=".*" />
+                    <conditions logicalGrouping="MatchAll" trackAllCaptures="true">
+                        <add input="{HTTP_ORIGIN}" pattern="(http(s)?://((.+)?\.kcc\.edu|localhost:[34]000|experience-test\.elluciancloud\.com|eee-prod-web-content-public-blue-prodtest\.s3\.amazonaws\.com))" />
+                    </conditions>
+                    <action type="Rewrite" value="{C:0}" />
+                </rule>
+            </outboundRules>
+            <rules>
+                <rule name="HTTPS Redirect" stopProcessing="true">
+                    <match url="(.*)" />
+                    <conditions>
+                        <add input="{HTTPS}" pattern="^OFF$" />
+                    </conditions>
+                    <action type="Redirect" url="https://{HTTP_HOST}/{R:1}" />
+                </rule>
+                <rule name="/help Redirect" stopProcessing="true">
+                    <match url="^help$" />
+                    <action type="Redirect" url="https://form.jotform.com/81775152814965" redirectType="Permanent"/>
+                </rule>
+                <rule name="Archived Articles Redirect" stopProcessing="true">
+                    <match url="^(20(?:18|19|20|21)\/\d{2}\/\d{2}\/[^\.]+).html$" />
+                    <action type="Redirect" url="https://{HTTP_HOST}/archive/{R:1}/" />
+                </rule>
+            </rules>
+        </rewrite>
+        <httpErrors>
+            <remove statusCode="401" subStatusCode="-1" />
+            <remove statusCode="403" subStatusCode="-1" />
+            <remove statusCode="404" subStatusCode="-1" />
+            <remove statusCode="500" subStatusCode="-1" />
+            <!-- full url when responsemode is Redirect -->
+            <error statusCode="401" path="/404.html" responseMode="Redirect" />
+            <!-- local relative path when responsemode is ExecuteURL -->
+            <error statusCode="403" path="/404.html" responseMode="ExecuteURL" />
+            <error statusCode="404" path="/404.html" responseMode="ExecuteURL" />
+            <error statusCode="500" path="/404.html" responseMode="ExecuteURL" />
+        </httpErrors>
+        <caching enabled="true" enableKernelCache="true">
+            <profiles>
+                <add extension=".html" policy="CacheUntilChange" kernelCachePolicy="CacheUntilChange" />
+                <add extension=".pdf" policy="CacheUntilChange" kernelCachePolicy="CacheUntilChange" />
+                <add extension=".js" policy="CacheUntilChange" kernelCachePolicy="CacheUntilChange" />
+                <add extension=".css" policy="CacheUntilChange" kernelCachePolicy="CacheUntilChange" />
+                <add extension=".jpg" policy="CacheUntilChange" kernelCachePolicy="CacheUntilChange" />
+                <add extension=".jpeg" policy="CacheUntilChange" kernelCachePolicy="CacheUntilChange" />
+                <add extension=".png" policy="CacheUntilChange" kernelCachePolicy="CacheUntilChange" />
+                <add extension=".gif" policy="CacheUntilChange" kernelCachePolicy="CacheUntilChange" />
+                <add extension=".svg" policy="CacheUntilChange" kernelCachePolicy="CacheUntilChange" />
+            </profiles>
+        </caching>
+        <staticContent>
+            <mimeMap fileExtension=".webmanifest" mimeType="application/manifest+json" />
+        </staticContent>
+    </system.webServer>
 </configuration>
