--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ google-tag_key: GTM-T37TN4S
 url: "https://news.kcc.edu"
 public-url: "https://news.kcc.edu"
 canonical_baseurl: "https://news.kcc.edu"
-theme: "kcc-gem-theme"
+theme: "kcc-gem-theme-original"
 nav_links:
   - link_text: Home
     link_href: ''
@@ -95,6 +95,9 @@ exclude:
   - "buildtools/"
   - "postcss.config.js"
   - "process-archive-files.mjs"
+  - "look-for-deprecated-bs4-classes.mjs"
+  - "look-for-deprecated-bs4-js.mjs"
+  - "look-for-string-in-project-files.mjs"
 
 uploads_dir: "/uploads/2023"
 
