--- a/web.config
+++ b/web.config
@@ -36,7 +36,7 @@
                     <action type="Redirect" url="https://form.jotform.com/81775152814965" redirectType="Permanent"/>
                 </rule>
                 <rule name="Archived Articles Redirect" stopProcessing="true">
-                    <match url="^(20(?:18|19|20|21)\/\d{2}\/\d{2}\/[^\.]+).html$" />
+                    <match url="^(20(?:18|19|20|21|22|23)\/\d{2}\/\d{2}\/[^\.]+).html$" />
                     <action type="Redirect" url="https://{HTTP_HOST}/archive/{R:1}/" />
                 </rule>
             </rules>
