Switch project to kcc-gem-theme v3.

--- a/_config.yml
+++ b/_config.yml
@@ -5,22 +5,25 @@ timezone: America/Chicago
 port: 3000
 # BUILD
 google-tag_key: GTM-T37TN4S
-url: "https://news.kcc.edu"
-public-url: "https://news.kcc.edu"
-canonical_baseurl: "https://news.kcc.edu"
-theme: "kcc-gem-theme-original"
+url: "https://www.kcc.edu/news"
+public-url: "https://www.kcc.edu"
+canonical_baseurl: "https://www.kcc.edu/news"
+theme: "kcc-gem-theme"
+theme_config: false
+core_site: false
+subsection_title: "KCC Newsroom"
 nav_links:
   - link_text: Home
     link_href: ''
     button: false
   - link_text: News
-    link_href: 'news'
+    link_href: 'news/'
     button: false
   - link_text: Events
-    link_href: 'events'
+    link_href: 'events/'
     button: false
   - link_text: Videos
-    link_href: 'videos'
+    link_href: 'videos/'
     button: false
   - link_text: Contact
     link_href: '#contact'
